# mcp-workshop-train

./: .dockerignore  .editorconfig  .gitignore  .tool-versions  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/clients/pydantic_ai/: __init__.py  main.py  prompts.py
src/clients/settings/: __init__.py
src/clients/slack/: main.py  manifest.yaml
src/servers/download/: main.py  utils.py
src/servers/online_search/: main.py
src/servers/settings/: __init__.py  main.py
src/servers/today/: main.py
